--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@picocss/pico": "^2.0.6",
     "bootstrap": "^5.3.3",
+    "bootswatch": "^5.3.3",
     "dom": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,6 +28,6 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "vite": "^5.2.8"
   }
 }
